<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="MogoID">8a4624fa02ba4cc190819ff0f45a5930</string>
    <string name="app_name">清宫预测表</string>
    <string name="hello_world">Hello world!</string>
    <string name="ad_loading">广告加载中。。。</string>
    <string name="action_settings">设置</string>
    <string name="start_tv_qinggongbiao">清宫表</string>
    <string name="start_tv_qinggongbiao_content">\t\t清宫生男生女表是由中国古人发明的，埋在一个有700多年历史的皇陵下。由于时代久远，清宫表来历的真实性无从考究，古人是根据阴阳五行和八卦推算演译，再加上时间推算而得。清宫表由两部分构成，横坐标为怀孕月份，从1月到12月，纵坐标为年龄，从18岁到45岁，很多人问到清宫表到底怎样观看，要点就在这两部分，女性年龄是以农历虚龄（即真实年龄加1岁）算，而怀孕月份即是受孕的那个月份，当然亦是以农历算，横坐标和纵坐标对正过来就测试到是生男还是生女。</string>
    <string name="start_btn_start">开始</string>
    <string name="main_tv_title_text">主界面</string>
    <string name="main_btn_done_text">预测生男生女</string>
    <string name="main_btn_ready_text">规划怀孕日期</string>
    <string name="main_btn_view_text">查看清宫表</string>
    <string name="main_tv_what_text">\t请选择您需要的操作：</string>
    <string name="main_btn_showAd_text">点击广告支持作者</string>
    <string name="done_tv_title_text">预测生男生女</string>
    <string name="done_tv_age_month_text">\t请输入您的年龄(虚岁)和怀孕的月份(农历)：</string>
    <string name="done_sp_age_prompt">请选择年龄：</string>
    <string name="done_sp_month_prompt">请选择月份：</string>
    <string name="done_tv_month_text">农历：</string>
    <string name="done_btn_return_text">回主界面</string>
    <string name="done_btn_result_text">查看结果</string>
    <string name="done_alertdialog_title_text">结果：</string>
    <string name="done_alertdialog_btn_ok_text">确定</string>
    <string name="ready_tv_title_text">规划怀孕日期</string>
    <string name="ready_tv_year_text">\t请选择孩子出生的年份、您的年龄(虚岁)和孩子的性别:</string>
    <string name="ready_tv_year_select_text">年份：</string>
    <string name="ready_tv_sex_select_text">性别：</string>
    <string name="ready_done_tv_age_select_text">虚岁：</string>
    <string name="ready_btn_return_text">回主界面</string>
    <string name="ready_btn_result_text">查看日期</string>
    <string name="ready_alertdialog_title_text">日期如下</string>
    <string name="ready_alertdialog_btn_ok_text">确定</string>
    <string name="exit_btn_cancel_text">取消</string>
    <string name="exit_btn_ok_text">退出</string>
    <string name="exit_tv_title_text">退出</string>
    <string name="exit_tv_content_text">是否要真的退出?</string>
    <string name="detail_tv_title_text">查看清宫表</string>
    <string name="detail_tv_age_select_text">虚岁：</string>
    <string name="detail_btn_return_text">回主界面</string>
    <string-array name="ages">
        <item>19岁</item>
        <item>20岁</item>
        <item>21岁</item>
        <item>22岁</item>
        <item>23岁</item>
        <item>24岁</item>
        <item>25岁</item>
        <item>26岁</item>
        <item>27岁</item>
        <item>28岁</item>
        <item>29岁</item>
        <item>30岁</item>
        <item>31岁</item>
        <item>32岁</item>
        <item>33岁</item>
        <item>34岁</item>
        <item>35岁</item>
        <item>36岁</item>
        <item>37岁</item>
        <item>38岁</item>
        <item>39岁</item>
        <item>40岁</item>
        <item>41岁</item>
    </string-array>
    <string-array name="months">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
</resources>
