<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:adsmogo="http://www.adsmogo.com"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_main"
        android:layout_weight="1">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/main_tv_title_text"
            android:textSize="@dimen/title"
            android:gravity="center"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/main_tv_what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_tv_what_text"
            android:layout_below="@id/main_title"
            android:textSize="@dimen/btn_size"
            android:paddingTop="@dimen/padding" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/main_tv_what"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/main_btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/token"
                android:textSize="@dimen/btn_size"
                android:layout_margin="@dimen/margin"
                android:text="@string/main_btn_done_text" />

            <Button
                android:id="@+id/main_btn_ready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/token"
                android:textSize="@dimen/btn_size"
                android:layout_margin="@dimen/margin"
                android:text="@string/main_btn_ready_text" />

            <Button
                android:id="@+id/main_btn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/token"
                android:textSize="@dimen/btn_size"
                android:layout_margin="@dimen/margin"
                android:text="@string/main_btn_view_text" />
        </LinearLayout>
    </RelativeLayout>
    <!--这里是广告位-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.adsmogo.adview.AdsMogoLayout
            android:id="@+id/adsMogoView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            adsmogo:appid="@string/MogoID"/>
    </LinearLayout>

</LinearLayout>
