<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main">

        <TextView
            android:id="@+id/ready_tv_title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/ready_tv_title_text"
            android:layout_alignParentTop="true"
            android:textSize="@dimen/title"
            android:gravity="center" />

        <TextView
            android:id="@+id/ready_tv_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ready_tv_year_text"
            android:layout_below="@id/ready_tv_title"
            android:textSize="@dimen/btn_size"
            android:paddingTop="@dimen/padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/ready_tv_year">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_tv_year_select_text"
                    android:textSize="@dimen/btn_size" />

                <Spinner
                    android:id="@+id/ready_sp_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_third"
                    android:layout_weight="1"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_done_tv_age_select_text"
                    android:textSize="@dimen/btn_size" />

                <Spinner
                    android:id="@+id/ready_sp_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_third"
                    android:layout_weight="1"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_tv_sex_select_text"
                    android:textSize="@dimen/btn_size" />

                <Spinner
                    android:id="@+id/ready_sp_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_third"
                    android:layout_weight="1"></Spinner>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin"
                android:gravity="center">

                <Button
                    android:id="@+id/ready_btn_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_main"
                    android:text="@string/ready_btn_return_text"
                    android:layout_margin="@dimen/margin"
                    android:textSize="@dimen/btn_size" />

                <Button
                    android:id="@+id/ready_btn_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_main"
                    android:textSize="@dimen/btn_size"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/ready_btn_result_text" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>