<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:adsmogo="http://www.adsmogo.com"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main">

        <TextView
            android:id="@+id/detail_tv_title"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/detail_tv_title_text"
            android:gravity="center"
            android:textSize="@dimen/title" />

        <LinearLayout
            android:id="@+id/detail_ll_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin"
            android:layout_below="@+id/detail_tv_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_tv_age_select_text"
                android:textSize="@dimen/btn_size" />

            <Spinner
                android:id="@+id/detail_sp_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_third"
                android:layout_weight="1"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/detail_ll_age">
            <ListView
                android:id="@+id/detail_lv_qinggong"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/token"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/padding"
                ></ListView>
            <Button android:id="@+id/detail_btn_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_main"
                android:textSize="@dimen/btn_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:text="@string/detail_btn_return_text"
                android:layout_below="@id/detail_lv_qinggong"/>
            </LinearLayout>

    </RelativeLayout>
    <!--这里是广告位-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.adsmogo.adview.AdsMogoLayout
            android:id="@+id/adsMogoView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            adsmogo:appid="@string/MogoID"/>
    </LinearLayout>
</LinearLayout>